完善错误提示红框判断（进行中 2/?）